@@ -1,3 +1,8 @@
+2001-12-18   Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02667]
+	* terms.c (mouse_init): #ifdef SIGWINCH guard
+
 2001-12-16  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02666] resizing on xterm with gpm support
